--- a/client/package.json
+++ b/client/package.json
@@ -4,18 +4,29 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.11",
-    "@types/react": "16.9.5",
-    "@types/react-dom": "16.9.1",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "jwt-decode": "^2.2.0",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-devtools": "^3.5.0",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/jest": "24.0.18",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/node": "12.7.11",
+    "@types/react": "16.9.5",
+    "@types/react-dom": "16.9.1",
+    "@types/react-redux": "^7.1.4",
+    "@types/react-router-dom": "^5.1.0",
     "tslint": "^5.20.0",
+    "typesafe-actions": "^4.4.2",
     "typescript": "3.6.3"
   },
   "scripts": {
