--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "mongoose": "^5.6.4",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
